--- a/munapp/app/templates/base.html
+++ b/munapp/app/templates/base.html
@@ -29,6 +29,7 @@
                 <li><a class="active" href="{{ url_for('login') }}">Login</a></li>
                 <li><a class="active" href="{{ url_for('register') }}">Sign up</a></li>
                 {% else %}
+                <li><a class="active" href="{{ url_for('createTopic') }}">Create New Topic</a></li>
                 <li><a class="active" href="{{ url_for('logout') }}">Logout</a></li>
                 {% endif %}
             </ul>
