Added view topic page and link to page from topic

--- a/munapp/app/templates/index.html
+++ b/munapp/app/templates/index.html
@@ -8,7 +8,7 @@
             <div><p><b>USERNAME:</b> {{ user.username }} <b>EMAIL:</b> {{ user.email }}</p></div>
         {% endfor %}
         {% for topic in topics %}
-            <div><p><b>USER:</b> {{ topic.author.username }} <b>TOPIC:</b> {{ topic.title }}</p></div>
+            <div><p><b>USER:</b> {{ topic.author.username }} <b>TOPIC:</b><a class="active" href="{{ url_for('viewTopic',id=topic.id )}}">{{topic.title}}</a></p></div>
             {% for c in comments %}
                 {% if c.topic_id == topic.id %}
                     <p>ID: {{ c.user_id }}  COMMENT: {{ c.body }}</p>
