--- a/munapp/app/templates/post.html
+++ b/munapp/app/templates/post.html
@@ -18,7 +18,7 @@
 		</form>
 		{% for comment in comments %}
             {% if comment.topic_id == topic.id %}
-            	<p>ID: {{ comment.user_id }}  COMMENT: {{ comment.body }}</p>
+            	<p>USERNAME: {{ comment.author.username }}  COMMENT: {{ comment.body }}</p>
             {% endif %}
         {% endfor %}
 	</div>
