Added ability to edit comments

--- a/munapp/app/templates/post.html
+++ b/munapp/app/templates/post.html
@@ -19,7 +19,11 @@
 		{% for comment in comments %}
             {% if comment.topic_id == topic.id %}
             	<p>USERNAME: {{ comment.author.username }}  COMMENT: {{ comment.body }}</p>
+                {% if current_user.id == comment.user_id %}
+                    <p><a class="active" href="{{ url_for('editComment',id=comment.id )}}">Edit</a></p>
+                {% endif %}
             {% endif %}
         {% endfor %}
 	</div>
 {% endblock %}
+<!-- <a class="active" href="{{ url_for('editComment',id=comment.id )}}"> -->
