Editing topics added

--- a/munapp/app/templates/post.html
+++ b/munapp/app/templates/post.html
@@ -5,6 +5,9 @@
 	<div style="padding:50px; border:solid" align="left">
 		<h1>{{ topic.title }}</h1>
 		<div><p>{{ topic.body }}</p></div>
+        {% if current_user.id == topic.user_id %}
+            <p><a class="active" href="{{ url_for('editTopic',id=topic.id )}}">Edit Topic</a></p>
+        {% endif %}
 		
 		<form action="" method="post">
 			{{ form.csrf_token }}
@@ -20,7 +23,7 @@
             {% if comment.topic_id == topic.id %}
             	<p>USERNAME: {{ comment.author.username }}  COMMENT: {{ comment.body }}</p>
                 {% if current_user.id == comment.user_id %}
-                    <p><a class="active" href="{{ url_for('editComment',id=comment.id )}}">Edit</a></p>
+                    <p><a class="active" href="{{ url_for('editComment',id=comment.id )}}">Edit Comment</a></p>
                 {% endif %}
             {% endif %}
         {% endfor %}
